--- a/code.gov-metrics/metrics.html
+++ b/code.gov-metrics/metrics.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="metrics.css">
 </head>
 
 <body>
-    <p class="vcs-summary-output"></p>
+    <ul class="vcs-summary-output">
+    </ul>
     <script src="metrics.js"></script>
 </body>
 
